Fix spacing issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,9 +110,12 @@ body {
 }
 
 .phone-card {
-    width: fit-content;
     padding: 20px;
-    list-style-type:none;
+    list-style-type: none;
+}
+
+.phone-card li {
+    padding-bottom: 15px;
 }
 
 .phone-image {
